layout issue in course_page is fixed

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -117,8 +117,3 @@ a:hover {
     color: #66b0bf;
 
 }
-
-.course-link {
-    display: inline-block;
-    width: 100%;
-}
